public/assets/css/toolkit.css
/* ... */
img[data-action="zoom"] {
  cursor: pointer;
  cursor: -webkit-zoom-in;
  cursor: -moz-zoom-in;
}
.zoom-img,
.zoom-img-wrap {
  position: relative;
  z-index: 1080;
  transition: all 300ms;
}
img.zoom-img {
  cursor: pointer;
  cursor: -webkit-zoom-out;
  cursor: -moz-zoom-out;
}
.zoom-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1079;
  background: #ffffff;
  pointer-events: none;
  opacity: 0;
  transition: opacity 300ms;
}
.zoom-overlay-open .zoom-overlay {
  filter: "alpha(opacity=100)";
  opacity: 1;
}
.zoom-overlay-open,
.zoom-overlay-transitioning {
  cursor: default;
}
.media,
.media-body {
  overflow: visible;
}
.avatar-list {
  list-style: none;
  padding: 0;
}
.avatar-list-item {
  display: inline-block;
  width: 32px;
  margin-right: 5px;
  vertical-align: top;
}
.avatar-list-item:last-child {
  margin-right: 0;
}
.avatar-list-item img {
  width: 100%;
}
.growl {
  position: fixed;
  top: 65px;
  left: 15px;
  right: 15px;
  z-index: 1090;
}
.growl.growl-static {
  position: relative;
  top: auto;
  right: auto;
  z-index: auto;
}
.growl .alert {
  -webkit-animation: slide-from-top 1000ms cubic-bezier(0.2, 0.7, 0.5, 1);
          animation: slide-from-top 1000ms cubic-bezier(0.2, 0.7, 0.5, 1);
  margin-bottom: 10px;
}
.growl .alert-dismissable .close,
.growl .alert-dismissible .close {
  top: -5px;
}
@media (min-width: 768px) {
  .growl {
    left: auto;
    width: 400px;
  }
}
@-webkit-keyframes slide-from-right {
  0% {
    -webkit-transform: translateX(30%);
            transform: translateX(30%);
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }
}
@keyframes slide-from-right {
  0% {
    -webkit-transform: translateX(30%);
            transform: translateX(30%);
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }
}
@-webkit-keyframes slide-from-top {
  0% {
    -webkit-transform: translateY(-30%);
            transform: translateY(-30%);
    opacity: 0;
  }
  70% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}
@keyframes slide-from-top {
  0% {
    -webkit-transform: translateY(-30%);
            transform: translateY(-30%);
    opacity: 0;
  }
  70% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}
.profile-header {
  position: relative;
  display: table;
  width: 100%;
  height: 300px;
  padding-bottom: 48px;
  margin-bottom: 0;
  text-align: center;
  border: 0;
  overflow: hidden;
}
.profile-header .container,
.profile-header .container-fluid { 
  display: table-cell;
  width: 1000000px;
  text-align: center;
  vertical-align: middle;
}

.profile-header .tf-header-background,
.profile-header .tf-header-background-overlay {
  /*margin-bottom: 20px;*/
  display: table-cell;
  width: 100%;
  height: 100%;
  vertical-align: middle;
  text-align: center;
}

.profile-header .container-inner-home {
  max-width: 1000px;
  margin-top: 50px;
  margin-right: 20px;
}

/*.profile-header .container-inner-home .row .gutter {

}*/
.profile-header .container-inner {
  max-width: 300px;
  margin: 0 auto;
}

.profile-header .media-object {
  display: inline-block;
  width: 80px;
  margin-right: 0;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}
.profile-header-bio {
  font-size: 16px;
  color: #fff;
}
.profile-header-user {
  margin-top: 20px;
  color: #fff;
}
@media (min-width: 480px) {
  .profile-header {
    height: 400px;
  }
}
@media (min-width: 768px) {
  .profile-header {
    height: 150px;
  }
  .profile-header .media-object {
    width: 110px;
  }
}
.profile-header-nav {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  line-height: 0;
}
.profile-header-nav .nav {
  display: inline-block;
  border-bottom: 0;
}
.profile-header-nav .nav > li > a {
  padding: 0 10px 18px;
  font-size: 16px;
  color: rgba(255, 255, 255, 0.5);
}
.profile-header-nav .nav-tabs > li > a {
  transition: color 0.2s ease-in-out;
}
.profile-header-nav .nav-tabs > li > a:focus,
.profile-header-nav .nav-tabs > li > a:hover,
.profile-header-nav .nav > li.active > a {
  color: #fff;
  background: transparent;
  border-color: transparent;
}
.profile-header-nav .active:after {
  position: absolute;
  bottom: 0;
  left: 50%;
  content: '';
  margin-left: -10px;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid #f5f8fa;
}
@media (min-width: 768px) {
  .profile-header-nav .nav > li > a {
    padding-bottom: 0 15px 23px;
  }
}
.media-list-stream .media.list-group-item {
  margin-top: 0;
}
.media-list-stream .media-body-inline-grid {
  width: 100%;
}
.media-list-stream .media-body-inline-img,
.media-list-stream .media-body-inline-grid {
  margin: 20px 0 25px;
}
.media-list-stream .media-body-inline-grid img,
.media-list-stream .media-body-inline-img {
  max-width: 100%;
}
.media-list-stream .media-object {
  width: 60px;
  margin-right: 5px;
}
.media-list-stream .media-body .media-list .media-object {
  width: 40px;
}
.media-list-stream .media-list .media-object {
  display: none;
}
.media-list-stream .media-object {
  /*border-radius: 100%;*/
}
.media-list-stream .media .text-muted a {
  color: #9da9b0;
  font-weight: 700;
}
.media-list-stream .media-body-actions {
  margin-top: 5px;
}
.media-list-stream .media-heading > h5 {
  margin-bottom: 0;
  margin-top: 5px;
}
@media (min-width: 768px) {
  .media-list-stream .media-list .media-object {
    display: block;
  }
  .media-list-stream .media-object {
    width: 60px;
  }
}
.media-list-conversation .media-object {
  width: 42px;
  margin-right: 5px;
}
.media-list-conversation .media-body-text {
  position: relative;
  padding: 10px 15px;
  background-color: #f5f8fa;
  border-radius: 9px;
}
/* ... */

